--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,44 @@
 services:
-  postgres:
-    container_name: postgres_container
-    image: postgres
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-1234}
-      PGDATA: /data/postgres
-    volumes:
-       - postgres:/data/postgres
+  # client:
+  #   container_name: client
+  #   image: shinhyeok/dobda-client:latest
+  #   ports:
+  #   # - ${SERVER_PORT}:${SERVER_PORT}
+  #   - 3000:3000
+  #   networks:
+  #   - webnet
+  #   depends_on:
+  #     - db
+  #     - server
+  server:
+    container_name: main
+    image: shinhyeok/dobda-server:latest
     ports:
-      - "5432:5432"
+      # - ${SERVER_PORT}:${SERVER_PORT}
+      - 8080:8080
+    # command: npm run start:dev
+    env_file:
+      - .prod.env # cloud server : - .server.env
     networks:
-      - postgres
-    restart: unless-stopped
+      - webnet
+    depends_on:
+      - db
+
+  db:
+    container_name: postgres
+    image: postgres
+    ports:
+      - '5432:5432'
+    env_file:
+      - .prod.env
+    environment:
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+    volumes:
+      - D:/postgresql/data/:/var/lib/postgresql/data
+
+networks:
+  webnet:
+volumes:
+  pgdata:
