--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,10 +14,22 @@ jobs:
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+      - name: create env file
+        run: echo "${{ secrets.BAC_ENV }}" >> .prod.env
+
+      - name: Login
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
-          push: false
-          tags: qqnaa/qq_backend:latest
+          context: .
+          dockerfile: .Dockerfile
+          platform: linux/arm64/v8,linux/amd64
+          push: true
+          tags: shinhyeok/dobda-server:latest
