--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,9 @@ jobs:
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
+
       - name: create env file
-        run: echo "${{ secrets.BACK_ENV }}" >> .prod.env
+        run: echo "${{ secrets.ENV_VARS }}" >> .env
 
       - name: Login
         uses: docker/login-action@v1
@@ -25,7 +26,7 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Build and push
+      - name: Build and Push Docker Images
         uses: docker/build-push-action@v3
         with:
           context: .
