--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
         uses: docker/setup-qemu-action@v2
 
       - name: create env file
-        run: echo "${{ secrets.ENV_VARS }}" >> .env
+        run: echo "${{ secrets.ENV_VARS }}" >> .prod.env
 
       - name: Login
         uses: docker/login-action@v1
@@ -29,6 +29,7 @@ jobs:
       - name: Build and Push Docker Images
         uses: docker/build-push-action@v3
         with:
+          dockerfile: Dockerfile
           context: .
           platform: linux/arm64/v8,linux/amd64
           push: true
