--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,6 @@ jobs:
         with:
           context: .
           dockerfile: .Dockerfile
-          platform: linux/arm64/v8,linux/amd6
+          platforms: linux/arm64/v8,linux/amd6
           push: true
           tags: shinhyeok/dobda-server:latest
