--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: create env file
-        run: echo "${{ secrets.ENV_VARS }}" >> .prod.env
+        run: echo "${{ secrets.BACK_ENV }}" >> prod.env
 
       - name: Login
         uses: docker/login-action@v1
@@ -24,13 +30,11 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
       - name: Build and Push Docker Images
         uses: docker/build-push-action@v3
         with:
           context: .
           dockerfile: .Dockerfile
-          platforms: linux/arm64/v8,linux/amd6
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: shinhyeok/dobda-server:latest
